--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: default
                <div class="subscription-form-input">
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/e3bbda51" method="POST">  
 			    
-                              <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="E-mail" required>
+                              <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="Your e-mail" required>
 				 <button type="submit"><i class="fas fa-arrow-circle-right"></i> </button>
                     </form>
                                 <span class="sender-link-wrapper">
