--- a/assets/main.css
+++ b/assets/main.css
@@ -25,8 +25,8 @@ a{
 	-moz-transition:all 0.2s;
 	transition:all 0.2s
 }
-a:focus,a:hover{
-	color:#0085A1
+a:focus,a:hover:not(.list-inline-item){
+	color:#fff
 }
 blockquote{
 	font-style:italic;
