--- a/assets/main.css
+++ b/assets/main.css
@@ -652,6 +652,6 @@ padding-top: 2px;
         color: #000000;
 	    font-weight: bold;
 	}
-	.emai:focus,:hover {
+	.emai:hover {
 		background-color:#fff; 
 	}
