--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,137 @@ layout: default
       </div>
     </div>
 		               
+
+                    <style type="text/css">
+    .subscription-form input {
+        display: inline-block;
+        padding: 4px;
+        font-size: 13px;
+        line-height: 18px;
+        color: #555555;
+        border: 1px solid #ccc;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        width: 100%;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        margin-bottom: 10px;
+    }
+    .checkbox_wrapper {
+        display: inline-block;
+        padding: 4px;
+        width: 100%;
+    }
+    .subscription-form input.checkbox_type, .subscription-form .checkbox_label {
+        width: auto;
+        vertical-align: middle;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+    .subscription-form .checkbox_label {
+        display: inline-block;
+        line-height: 18px;
+        margin-left: 4px;
+        font-size: 14px;
+        font-family: helvetica; 
+        color: #d8c580;
+    }
+
+    .subscription-form input {
+        color: #000000;
+        background-color: #ffffff;
+        border: 0px solid #c4c4c4;
+        border-radius:  3px;
+        -webkit-border-radius:  3px;
+        -moz-border-radius:  3px;
+    }
+
+    .btn-grad {
+        background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+        background: -o-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+        background: -moz-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+        background: linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+    }
+
+    .subscription-form-fields {
+        margin-top: 15px;
+    }
+
+    .subscription-form {
+        width: 600px; 
+        border: 2px solid #000000; 
+        border-radius: 10px; 
+        padding: 20px; 
+        margin: 0 auto; 
+        background-color: #000000;
+    }
+
+    .subscription-form h4 {
+        font-family: helvetica; 
+        color: #FBC403; 
+        font-size: 30px;
+        margin-top: 0px;
+    }
+
+    .subscription-thank-you {
+        font-family: helvetica; 
+        color: #d8c580; 
+        font-size: 14px;
+    }
+
+    .subscription-form-content {
+        font-family: helvetica; 
+        color: #d8c580; 
+        font-size: 14px;
+    }
+
+    .subscription-form button {
+        margin-top: 5px; 
+        border-radius: 5px; 
+        padding: 10px; 
+        display: block; 
+        text-align: center;
+        border: none;
+        width: 100%;
+        color: #FBC403; 
+        background-color: #000000; 
+        font-size: 20px; 
+        font-family: Times New Roman;
+    }
+
+    .sender-sub-main {
+        display: table;
+        width: 100%;
+        height: 100%;
+    }
+
+    .sender-sub-inner {
+        display: table-cell;
+        vertical-align: middle;
+    }
+    
+    .sender-link-wrapper {
+        display: block;
+        position: relative;
+        margin-top: 16px;
+    }
+    .sender-link {
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+        font-size: 12px;
+        text-decoration: none !important;
+        color: #555;
+    }
+    
+    .sender-link img {
+        width: 16px;
+        height: 16px;
+        margin-right: 2px;
+        vertical-align: text-bottom;
+    }
+
+</style>
+	    
 <script src="https://www.google.com/recaptcha/api.js"></script>
 <script type="text/javascript">
     function submitGR(token){
@@ -37,41 +168,22 @@ layout: default
 		            document.getElementById("submit-button").setAttribute("captcha", "true");
         });
 </script>
-  </header>
-	  
-            <div class="container">
-		    
-                <div class="row text-md-center text-lg-center text-xl-center">
-                    <div class="col-xs-12 col-sm-12 mx-auto ml-xs-0 ml-sm-0">
-			<h4 class="font-weight-bold text-h0">What would it be like to walk in the sandals of a Pharaoh?</h4>
-                        <p class="col20">You won't know until you unite Egypt — only the rulers of both Upper and Lower Egypt can be called as such, and, as of now, Egypt is shattered! Take the reins of this chariot on its way to the otherworld, restore the order, and build the great pyramid to preserve your legacy! But it's not going to be easy. The priests are breathing down your neck, the enemies are on a war footing, the noblemen are out of line, and, on top of all that, the God's Wife must be chosen swiftly, lest no heir is left to the throne...
-			    </p><p class="col20">Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
-			                <h5 class="text-h0">Sign up to find out first-hand!</h5>
-                    </div>
-                </div>
-                </div>
-	  
-            <div class="container">
-                <div class="row text-md-center text-lg-center text-xl-center col-auto">
-               <div class="subscription-form-input col-xs-12 mx-auto ml-xs-0 ml-sm-0">
-		       
-<!---
 <div class="sender-sub-main">
     <div class="sender-sub-inner">
         <div class="subscription-form">
             <h4 class="dont-break-out">Egypt: Shattered Order</h4>
                                         <div class="subscription-form-fields">
                     <div class="subscription-form-content">
-                                            </div>
-                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/00527de2" method="POST">
+                        <p>Fill in the form below to receive our latest news!</p>                    </div>
+                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/15385/45a58697" method="POST">
                                         
                             <div class="subscription-form-fields" id="subscription-form-fields">
-                                                                                                        <input name="email" type="email"class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
+                                                                                                        <input name="email" type="email"class="email_type" id="email" data-label="Email" placeholder="Email" required>
                                                                                                 </div>
                         						                            <br>
                             <div id ="recaptcha-failed-message" hidden class="subscription-thank-you">Recaptcha failed, try again!</div>
                             <div class="g-recaptcha" data-callback="submitGR" style="transform: scale(0.68); -webkit-transform: scale(0.68); transform-origin: 0 0; -webkit-transform-origin: 0 0;" data-sitekey="6Lek36IZAAAAAHLJFLZbOmRMQNnwZSeCuKmTG0XM"></div>
-												                        <button id="submit-button" style="margin-top:5px" type="submit" class=" ">SIGN UP</button>
+												                        <button id="submit-button" style="margin-top:5px" type="submit" class="  btn-grad dont-break-out">Subscribe</button>
                     </form>
                 </div>
                                 <span class="sender-link-wrapper">
@@ -82,11 +194,9 @@ layout: default
                 </span>
                                     </div>
     </div>
-</div>    
+</div>                
 
-
-
-
+<!--
 
 	    <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/1d98ce24" method="POST">
 	<div class="subscription-form-fields" id="subscription-form-fields">
