--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,12 +35,38 @@ layout: default
                 </div>
                 </div>
 
+	  <div class="sender-sub-main">
+    <div class="sender-sub-inner">
+        <div class="subscription-form">
+            <h4 class="dont-break-out">Egypt: Shattered Order</h4>
+                                        <div class="subscription-form-fields">
+                    <div class="subscription-form-content">
+                                            </div>
+                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/00527de2" method="POST">
+                                        
+                            <div class="subscription-form-fields" id="subscription-form-fields">
+                                                                                                        <input name="email" type="email"class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
+                                                                                                </div>
+                        						                            <br>
+                            <div id ="recaptcha-failed-message" hidden class="subscription-thank-you">Recaptcha failed, try again!</div>
+                            <div class="g-recaptcha" data-callback="submitGR" style="transform: scale(0.68); -webkit-transform: scale(0.68); transform-origin: 0 0; -webkit-transform-origin: 0 0;" data-sitekey="6Lek36IZAAAAAHLJFLZbOmRMQNnwZSeCuKmTG0XM"></div>
+												                        <button id="submit-button" style="margin-top:5px" type="submit" class=" ">SIGN UP</button>
+                    </form>
+                </div>
+                                <span class="sender-link-wrapper">
+                    <a class="sender-link" href="http://sender.net" title="Email marketing services">
+                        <img src="https://app.sender.net/favicon.png">
+                        <span>Sender.net email marketing</span>
+                    </a>
+                </span>
+                                    </div>
+    </div>
+</div>        
 
 <!--
             <div class="container">
                 <div class="row text-md-center text-lg-center text-xl-center col-auto">
                <div class="subscription-form-input col-xs-12 mx-auto ml-xs-0 ml-sm-0">         
-
 
 	    <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/1d98ce24" method="POST">
 	<div class="subscription-form-fields" id="subscription-form-fields">
